Rename css classes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
     <!-- DIV TO CONTAIN CHART-->
     <div id="chart" class="chart">
-        <select id="dropdownmenu" class="dataSetPicker"></select>
+        <select id="dropdownmenu" class="data-set-picker"></select>
     </div>
 
 
